# spotify-to-ytmusic

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  config.toml  pyproject.toml  requirements.txt
.venv311/: pyvenv.cfg
docs/: architecture.md
scripts/: curl_to_ytm_headers.py
src/migrator/: __init__.py  __main__.py  browser_cookies.py  cli.py  config.py  db.py  logging_setup.py  matching.py  secrets.py  spotify_client.py  web.py  ytm_client.py
src/migrator/static/: .gitkeep
src/migrator/templates/: base.html  index.html  review.html  setup.html
tests/: conftest.py  test_cli_accept.py  test_cli_import_dedupe.py  test_cli_run_wipe.py  test_cli_smoke.py  test_matching_end_to_end.py  test_scoring.py  test_secrets_and_db.py  test_spotify_client.py  test_ytm_client.py
tests/fixtures/: fuzzy_match.json  no_match.json  perfect_match.json
