[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spotify-to-ytmusic"
version = "0.1.0"
description = "Local-first desktop web app to migrate Spotify playlists to YouTube Music"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "spotify-to-ytmusic contributors" }]
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "jinja2==3.1.5",
  "python-multipart==0.0.20",
  "httpx==0.28.1",
  "pydantic==2.12.4",
  "pydantic-core>=2.41.5",
  "pydantic-settings==2.7.0",
  "sqlmodel==0.0.22",
  "spotipy==2.24.0",
  "ytmusicapi>=1.12.0",
  # Live browser cookie; see src/migrator/browser_cookies.py.
  "browser_cookie3>=0.19.1",
  "rich==13.9.4",
  "typer==0.15.1",
  "click>=8.0,<8.2",
  "keyring==25.6.0",
  "cryptography==44.0.0",
  "python-dotenv==1.0.1",
  "respx==0.22.0",
  "pytest==8.3.4",
  "pytest-asyncio==0.25.0",
]

[project.optional-dependencies]
dev = ["pytest==8.3.4", "pytest-asyncio==0.25.0", "respx==0.22.0"]

[project.scripts]
migrator = "migrator.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]